--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    @apply scroll-smooth
+}
+
+
+input::-webkit-file-upload-button {
+    display: none;
+}
